# VoxSurvey

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/raw/: vote_636.csv  vote_640.csv  vote_642.csv  vote_646.csv  vote_649.csv  vote_653.csv  vote_657.csv  vote_660.csv  vote_663.csv  vote_666.csv  vote_668.csv  vote_672.csv  vote_673.csv  vote_677.csv  vote_679.csv  vote_681.csv
notebook/: 01_download.py  02_transform.py  03_validate.py  04_load.py
src/: download.py  load_postgres.py  schemas.py  transform.py
src/DD_survey_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_transform.py
