[project]
name = "DD_survey_pipeline"
version = "0.1.0"
description = "A pipeline to ingest and harmonize swissvotes.ch data into Postgres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "ipykernel>=7.2.0",
  "marimo>=0.9.0",
  "pandas>=3.0.0",
  "pydantic>=2.8.0",
  "polars>=1.5.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
  "mypy>=1.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]